correct contrast on example form

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -77,3 +77,4 @@ html {
     color: #5E2CA5;
   }
 }
+.always-near-black { color: #111111; }
